--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "supertest": "6.1.6"
   },
   "dependencies": {
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "helmet": "^4.6.0",
     "knex": "^0.95.11",
